[package]
name = "abc403"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
abc403-a = { alias = "a", problem = "https://atcoder.jp/contests/abc403/tasks/abc403_a" }
abc403-b = { alias = "b", problem = "https://atcoder.jp/contests/abc403/tasks/abc403_b" }
abc403-c = { alias = "c", problem = "https://atcoder.jp/contests/abc403/tasks/abc403_c" }
abc403-d = { alias = "d", problem = "https://atcoder.jp/contests/abc403/tasks/abc403_d" }
abc403-e = { alias = "e", problem = "https://atcoder.jp/contests/abc403/tasks/abc403_e" }
abc403-f = { alias = "f", problem = "https://atcoder.jp/contests/abc403/tasks/abc403_f" }
abc403-g = { alias = "g", problem = "https://atcoder.jp/contests/abc403/tasks/abc403_g" }

[[bin]]
name = "abc403-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc403-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc403-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc403-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc403-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc403-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc403-g"
path = "src/bin/g.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
